2022-05-15  Bruno Haible  <bruno@clisp.org>

	Upgrade to libtool 2.4.7.
	* m4/libtool.m4: Update from libtool-2.4.7, with modifications.
	2017-10-21  Bruno Haible  <bruno@clisp.org>
		Fix -export-symbols and -export-symbols-regex support on
		Solaris 11.3.
		* m4/libtool.m4 (_LT_CMD_GLOBAL_SYMBOLS): Adjust symcode for
		Solaris.
	2009-04-23  Bruno Haible  <bruno@clisp.org>
		Fix recognition of "nm" command.
		* m4/libtool.m4 (LT_PATH_NM): Try "nm" program also when
		compiling for mingw in a cygwin environment.
	2008-04-06  Bruno Haible  <bruno@clisp.org>
		* m4/libtool.m4 (LT_INIT): When setting LIBTOOL, use
		CONFIG_SHELL; don't assume that the Makefile.in will set SHELL
		to ${CONFIG_SHELL}.
	* m4/ltoptions.m4: Likewise.
	* m4/ltsugar.m4: Likewise.
	* m4/ltversion.m4: Likewise.
	* m4/lt~obsolete.m4: Likewise.
	* build-aux/ltmain.sh: Likewise.

2022-01-05  Bruno Haible  <bruno@clisp.org>

	doc: Document a new feature (already in version 1.0).
	* doc/uniconv.texi (uniconv.h): Document
	iconveh_question_replacement_character.

2022-01-04  Bruno Haible  <bruno@clisp.org>

	Prepare for 1.0 release.
	* version.sh: Bump version number, date, gnulib version.
	* README: Update version.
	* NEWS: Update version.
	* lib/Makefile.am (LTV_*): Update to 4:0:2 (determined with help from
	gnulib's libtool-next-version).
	* doc/libunistring.texi: Bump copyright year.

2022-01-04  Bruno Haible  <bruno@clisp.org>

	build: Update Windows DLL exports.
	* woe32dll/unistring-exports.c: Add new UC_PROPERTY_* variables.

2021-12-31  Bruno Haible  <bruno@clisp.org>

	doc: Update for Unicode 14.0.0.
	* doc/unictype.texi (Joining group): Document UC_JOINING_GROUP_THIN_YEH,
	UC_JOINING_GROUP_VERTICAL_TAIL.
	NEWS: Mention the update.

2021-12-30  Bruno Haible  <bruno@clisp.org>

	doc: Update for Unicode 11.0.0.
	* doc/unictype.texi (Joining group): Document
	UC_JOINING_GROUP_HANIFI_ROHINGYA_*.

2021-12-30  Bruno Haible  <bruno@clisp.org>

	doc: Document properties for Emojis.