@@ -83,5 +83,10 @@ Report bugs
   - in the bug tracker at <https://savannah.gnu.org/projects/libunistring>
   - or by email to <bug-libunistring@gnu.org>.
 
+Join the GNU project
+--------------------
+
+See file JOIN-GNU.
+
 
 Bruno Haible <bruno@clisp.org>
